<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/material_dynamic_neutral95"
    android:padding="4dp">

    <TextView
        android:id="@+id/tv_custom_post_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true" />

    <GridLayout
        android:id="@+id/gridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_custom_post_date"
        android:layout_centerHorizontal="true"
        android:columnCount="3"
        android:rowCount="4">

        <ImageView
            android:id="@+id/custom_post_image_profile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_rowSpan="3"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:src="@drawable/peron" />


        <TextView
            android:id="@+id/custom_tv_following"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawablePadding="14dp"
            android:text="Following  "
            android:textSize="18sp"
            android:drawableStart="@drawable/following" />

        <TextView
            android:id="@+id/custom_tv_following_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/custom_tv_posts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawablePadding="14dp"
            android:text="Posts"
            android:textSize="18sp"
            android:drawableStart="@drawable/posts" />

        <TextView
            android:id="@+id/custom_tv_posts_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/custom_tv_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:drawablePadding="14dp"
            android:text="@string/followers"
            android:textSize="18sp"
            android:drawableStart="@drawable/followers" />

        <TextView
            android:id="@+id/custom_tv_followers_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/custom_post_btn_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginTop="8dp"
            android:padding="16dp"
            android:background="@android:color/holo_blue_dark"
            android:text="@string/follow"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/custom_tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_rowWeight="1"
            android:layout_columnSpan="2"
            android:layout_columnWeight="1"
            android:gravity="center"
            android:padding="8dp"
            android:textSize="18sp"
            android:textStyle="bold" />

    </GridLayout>

    <TextView
        android:id="@+id/custom_post_tv_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gridLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="2dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@android:color/holo_purple"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/plah_plah_plah"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_post_tv_body"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:drawablePadding="4dp"
            android:background="@color/white"
            android:drawableStart="@drawable/like"
            android:padding="8dp"
            android:text="@string/like"
            

            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawablePadding="4dp"
            android:drawableStart="@drawable/share"
            android:padding="8dp"
            android:text="@string/share"
            android:textAllCaps="false" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:drawableStart="@drawable/comment"
            android:padding="8dp"
            android:text="@string/comment"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>